swagger.json corrected. movies.js and validate.js body requirements corrected
